deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-hello
spec:
  type: LoadBalancer
  selector:
    app: springboot-hello
  ports:
  - name: http
    port: 8080
    targetPort: 8080
